--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
 <h1>All the power is within you.You can do anything evrything.My name is Naman.</h1>
+<h2>You are the creator of your own destingy.</h2>
 </body>
 </html>
 
