added third quote

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <body>
 <h1>All the power is within you.You can do anything evrything.My name is Naman.</h1>
 <h2>You are the creator of you destiny.</h2>
+<h3>Fait  faith faith , faith in self faith in god</h3>
 </body>
 </html>
 
